# fondat-salesforce

./: .pre-commit-config.yaml  AUTHORS.md  pyproject.toml
.github/workflows/: test.yaml
fondat/salesforce/: bulk.py  client.py  jobs.py  limits.py  oauth.py  service.py  sobjects.py
tests/: test_all.py
