[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 96
target-version = ['py38']

[tool.poetry]
name = "fondat-salesforce"
version = "3.0a5"
description = "Fondat package for Salesforce."
readme = "README.md"
authors = ["fondat-salesforce authors"]
homepage = "https://github.com/fondat/fondat-salesforce/"
documentation = "https://github.com/fondat/fondat-salesforce/wiki"
license = "MIT"
keywords = ["asgi", "framework", "resource", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "fondat" }
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7"
fondat-core = "^3.0b76"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pre-commit = "^2.13"
pytest = "^6.2"
pytest-asyncio = "^0.14"
pytest-cov = "^2.12"
